# ticketing-system

./: README.md  SESSION_MANAGEMENT_DOCUMENTATION.md  \  package-lock.json
app/src/: App.js  index.css
backend/: .gitignore  Dockerfile  README.md  WEBHOOK_TESTING_README.md  docker-compose.yml  flask_app.py  requirements.txt  test_monitoring.py  test_socketio.py  test_webhook.py  test_webhooks.py  ui_update_simulation.py  upgrade.sh  wsgi.py
backend/app/: __init__.py  config.py  hooks.py
backend/app/models/: __init__.py  attachment.py  base.py  comment.py  conversation.py  conversation_participant.py  kb.py  media.py  message.py  message_read_status.py  module.py  notification.py  server_monitor.py  testing.py  ticket.py  user.py  user_settings.py
backend/app/monitoring/: README.md  WORKER_SETUP.md  __init__.py  collector.py  config.py  config.py.example  sender.py  standalone_worker.py  worker.py
backend/app/routes/: __init__.py  attachments.py  auth.py  comments.py  conversations.py  dashboard.py  docs.py  kb.py  (+8 more)
backend/docs/: WEBHOOKS.md  openapi.yaml
backend/scripts/: create_first_user.py  run_tests.sh  test_swagger.sh
backend/tests/: conftest.py  test_media.py  test_routes.py  test_uploads.py
dashboard/: .env  .gitignore  Dockerfile  WEBHOOK_IMPLEMENTATION.md  index.html  openapi.yaml  package-lock.json  package.json  tailwind.config.cjs  upgrade
dashboard/src/: App.jsx  main.jsx  navigation.js
public/: index.html
server-monitor-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
server-monitor-rs/src/: main.rs
src/: App.css
(+68 files in other folders)
